# three-partition

./: .hlint.yaml  LICENSE  LICENSE.md  Main.hs  README.md  flake.nix  fourmolu.yaml  lefthook.yml  package.yaml  three-partition.cabal
.github/workflows/: ci.yml
app/: Main.hs
bench/: Main.hs
scripts/: check-coverage.sh  check-perf.sh  update-baselines.sh
src/: ThreePartition.hs
test/: Spec.hs
